@startuml GraphTasksTDEs_ClassDiagram
!theme plain
title Class Diagram - GraphTasksTDEs

package "br.edu.grafo.model" {
    class Edge {
        - destination: int
        - weight: double
        - label: String
        --
        + Edge(int, double, String)
        + Edge(int, double)
        + getDestination(): int
        + setDestination(int): void
        + getWeight(): double
        + setWeight(double): void
        + getLabel(): String
        + setLabel(String): void
        + toString(): String
    }

    class DirectedGraph {
        - adjacencyList: List<Edge>[]
        - vertexInformation: String[]
        - numVertices: int
        --
        + DirectedGraph(int)
        + createEdge(int, int, double): void
        + createEdge(int, int, double, String): void
        + removeEdge(int, int): void
        + printAdjacencies(): void
        + setInformation(int, String): void
        + getAdjacentVertices(int, int[]): int
        + hasEdge(int, int): boolean
        + getEdge(int, int): Optional<Edge>
        + getAdjacencies(int): List<Edge>
        + getNumVertices(): int
        + getInformation(int): String
    }
}

package "br.edu.grafo.algorithm" {
    class GraphAlgorithms {
        {static} + warshall(DirectedGraph): boolean[][]
        {static} + printBooleanMatrix(boolean[][], String): void
        {static} + printReachabilityStatistics(boolean[][], String): void
    }
}

package "br.edu.grafo.application" {
    class GraphApplicationService {
        - grafo: DirectedGraph
        --
        + createGraph(int): void
        + addEdge(int, int, double, String): void
        + removeEdge(int, int): void
        + executeBFS(int): List<Integer>
        + executeDFS(int): List<Integer>
        + executeDijkstra(int): double[]
        + executeWarshall(): boolean[][]
        + saveGraph(String): void
        + loadGraph(String): DirectedGraph
    }
}

package "br.edu.grafo.interfaces" {
    class GraphConsoleUI
}

package "br.edu.grafo.util" {
    class GraphStorage {
        {static} + saveGraph(DirectedGraph, String): boolean
        {static} + loadGraph(String): DirectedGraph
        {static} + fileExists(String): boolean
        {static} + listGraphs(): String[]
    }
}

package "br.edu.grafo.app" {
    class Main {
        {static} + main(String[]): void
    }

    class ExampleGraph {
        {static} + main(String[]): void
    }
}

DirectedGraph "1" *-- "*" Edge
GraphAlgorithms --> DirectedGraph
GraphApplicationService --> DirectedGraph
GraphApplicationService --> GraphAlgorithms
GraphApplicationService --> GraphStorage
GraphConsoleUI --> DirectedGraph
GraphStorage --> DirectedGraph
Main --> GraphApplicationService
Main --> GraphConsoleUI
ExampleGraph --> DirectedGraph
ExampleGraph --> GraphAlgorithms

@enduml
